fix hero title overflow on mobile

--- a/responsive-layouts/06/styles.css
+++ b/responsive-layouts/06/styles.css
@@ -146,7 +146,7 @@ body {
 .hero {}
 
 .hero__title {
-  font-size: var(--font-xl);
+  font-size: clamp(var(--font-lg), 10vw + 1rem, var(--font-xl));
   font-family: Playfair;
   font-weight: 900;
   color: var(--color-bole);
